workspaces/DC Dev/DC Dev/src/objects/Salary__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <label>Bank Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic__c</fullName>
        <label>Basic</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee_4__c</referenceTo>
        <relationshipLabel>Salaries</relationshipLabel>
        <relationshipName>Salaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gross_Salary__c</fullName>
        <formula>Total_Earnings__c  -  PF_Deduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRA__c</fullName>
        <label>HRA</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mode_of_Payment__c</fullName>
        <label>Mode of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTGS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Deduction__c</fullName>
        <label>PF Deduction</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary_Credit_Date__c</fullName>
        <label>Salary Credit Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Allowance__c</fullName>
        <label>Special Allowance</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Earnings__c</fullName>
        <formula>Basic__c  +  HRA__c  +  Special_Allowance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Salary</label>
    <nameField>
        <displayFormat>SAL-{000000}</displayFormat>
        <label>Salary ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_Number_Change</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Bank_Account_Number__c )</errorConditionFormula>
        <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
        <errorMessage>Bank Account Number cannot be changed once it is set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Number_Length</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
   LEN( Bank_Account_Number__c ) &lt;&gt; 25,
   TRUE,
   FALSE
)</errorConditionFormula>
        <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
        <errorMessage>Please enter a valid bank account number. (Length should be 25)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
     OR(LEN(Bank_Details__c) == 0,LEN(Bank_Account_Number__c) ==0),
   TRUE,
   FALSE
)</errorConditionFormula>
        <errorMessage>Bank Details cannot be Null.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Salary_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
    Salary_Credit_Date__c &lt;  Employee__r.Date_of_Joining__c,
    TRUE,
    FALSE
)</errorConditionFormula>
        <errorDisplayField>Salary_Credit_Date__c</errorDisplayField>
        <errorMessage>The salary credit date cannot come before Joining Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Salary_for_Inactive_Employees</fullName>
        <active>true</active>
        <description>Salary cannot be processed for inactive employees.</description>
        <errorConditionFormula>Employee__r.Is_Active__c == FALSE</errorConditionFormula>
        <errorMessage>Salary cannot be processed for inactive employees.</errorMessage>
    </validationRules>
</CustomObject>